--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="title" content="REST Countries API with color theme switcher">
+    <meta name="description" content="Want to learn about a country? Search information for it here!">
+    <meta name="keywords" content="API, TypeScript">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>REST Countries API</title>
   </head>
   <body>
     <div id="root"></div>
